<?xml version="1.0"?>
<package format="2">
  <name>ccat</name>
  <version>0.0.0</version>
  <description>CCAT is the ultimate bb2map algorithm.</description>

  <maintainer email="perception.bcnemotorsport@upc.edu">Oriol Gorriz</maintainer>

  <license>MIT</license>

  <!-- <author email="todo@todo.todo">Oriol Gorriz</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>as_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>shrd_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>as_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>shrd_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <exec_depend>as_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>shrd_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
